--- a/Views/Layout.cshtml
+++ b/Views/Layout.cshtml
@@ -15,7 +15,7 @@
 			<header class="py-3">
 				<a href="/"><h1 class="text-center my-4">j-indies.net</h1></a>
 			</header>
-			<div class="row">
+			<div class="row g-0">
 				<div class="col-lg-2">
 					<nav class="navbar navbar-expand-lg py-0 px-1">
 						<div class="container-fluid align-items-center flex-lg-column align-items-lg-stretch p-0">
