feat: add discord link

--- a/Views/Layout.cshtml
+++ b/Views/Layout.cshtml
@@ -41,6 +41,11 @@
 							</div>
 						</div>
 					</nav>
+					<div class="content p-2 mt-4">
+						<h2>Discord</h2>
+						<p class="mb-2">The j-indies! Discord server is what inspired this website!</p>
+						<a class="btn btn-sm btn-blue float-end" href="https://discord.gg/5hPNPGpMDF" target="_blank">Click here to join :-)</a>
+					</div>
 				</div>
 				<div class="col-lg-10">
 					<div class="content p-2">
