--- a/Views/Layout.cshtml
+++ b/Views/Layout.cshtml
@@ -53,8 +53,8 @@
 					</div>
 				</div>
 			</div>
-			<footer class="p-2">
-				2025
+			<footer class="mt-4">
+				j-indies! 2025
 			</footer>
 		</div>
 	</div>
