--- a/Views/Layout.cshtml
+++ b/Views/Layout.cshtml
@@ -15,27 +15,36 @@
 <body>
 	<div class="container">
 		<div class="main">
-			<header class="py-3">
+			<header class="py-3 mb-4">
 				<a href="/"><h1 class="text-center my-4">j-indies.net</h1></a>
 			</header>
-			<div class="row g-0">
+			<div class="row g-3">
 				<div class="col-lg-2">
 					<nav class="navbar navbar-expand-lg py-0 px-1">
 						<div class="container-fluid align-items-center flex-lg-column align-items-lg-stretch p-0">
-							<div class="p-2"><b>navigation</b></div>
-							<button class="navbar-toggler m-lg-auto px-0 border-0 ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+							<div class="p-2 navbar-header"></div>
+							<button class="navbar-toggler m-lg-auto px-0 border-0 ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" data-bs-theme="dark">
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div id="mainNav" class="collapse navbar-collapse">
-								<ul class="navbar-nav flex-column w-100 align-items-stretch text-end">
-									<li class="nav-item border-bottom-dashed">
-										<a class="nav-link p-2" href="/">home</a>
+								<ul class="navbar-nav flex-column w-100 align-items-end text-end">
+									<li class="nav-item nav-home border-bottom-dashed">
+										<a class="nav-link" href="/">home</a>
 									</li>
-									<li class="nav-item">
-										<a class="nav-link p-2" href="/artists">artists</a>
+									<li class="nav-item nav-artists">
+										<a class="nav-link" href="/artists">artists</a>
 									</li>
-									<li class="nav-item">
-										<a class="nav-link p-2" href="/labels">labels</a>
+									<li class="nav-item nav-labels">
+										<a class="nav-link" href="/labels">labels</a>
+									</li>
+									<li class="nav-item nav-genres">
+										<a class="nav-link" href="/genres">genres</a>
+									</li>
+									<li class="nav-item nav-contribute">
+										<a class="nav-link" href="/contribute">contribute</a>
+									</li>
+									<li class="nav-item nav-about">
+										<a class="nav-link" href="/about">about</a>
 									</li>
 								</ul>
 							</div>
