--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,64 +1,245 @@
 ﻿body {
-    font-family: 'Meiryo', sans-serif;
-    font-size: 0.8rem;
-    background: url(/img/bg.jpg);
-    background-repeat: repeat;
-    background-size: 50px 50px;
+    font-family: 'Nunito', sans-serif;
+    background: url(/img/stars-1.png) repeat;
+    font-size: 0.9rem;
 }
 
 .main {
-    background-color: #ffebeb;
-    border: solid #7a1d3c;
-    border-width: 0 1px 1px 1px;
+    padding: 1rem;
+    background: url(/img/stars-3.png) repeat;
+    border: 1px #15BDE4 solid;
+    border-radius: 0 0 10px 10px;
+    box-shadow: inset 0 0 2px 2px rgba(255, 255, 255, 0.9), 0 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 header {
-    background-color: #ffebeb;
-    border-bottom: 1px solid #7a1d3c;
+    background: url(/img/stars-2.png) repeat;
+    border-radius: 10px;
+    border: 1px #38aedc solid;
+    box-shadow: inset 0 0 2px 2px rgba(255, 255, 255, 0.5), 0 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-    header a {
-        color: #7a1d3c;
-        text-decoration: none;
-    }
+header a {
+    text-decoration: none;
+    color: white;
+}
+
+header a h1 {
+    font-weight: bolder;
+    text-shadow: 2px 2px #64a9c1;
+}
 
 .navbar {
-    background-color: #ffaec9;
-    border-bottom: solid #7a1d3c 1px;
+    color: #FEFFFF;
+}
+
+.navbar a, .navbar a:hover {
+    color: #FEFFFF;
 }
 
 .content {
-    min-height: 500px;
-    background-color: #ffebeb;
-    border-left: solid #7a1d3c 1px;
+    color: #3da7ba;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.4);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-footer {
-    background-color: #ffaec9;
-    border-top: solid #7a1d3c 1px;
+.btn {
+    background-repeat: repeat-x;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    text-shadow: 0 1px 1px rgba(64, 64, 64, 0.75);
+    box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.btn:hover, .btn:focus, .btn:focus-visible {
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    background-position: 0 -15px;
+    transition: background-position 0.1s linear;
+    box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.btn:active, .btn:first-child:active, :not(.btn-check) + .btn:active {
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    background-image: none;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), inset 0 0 1px 1px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.btn-purple {
+    background-image: linear-gradient(to bottom, #ccacdf, #a983bc);
+}
+
+.btn-purple, .btn-purple:hover, .btn-purple:focus, .btn-purple:focus-visible, .btn-purple:active,
+.btn-purple:first-child:active, :not(.btn-check) + .btn-purple:active {
+    color: #ffffff;
+    background-color: #a983bc;
+}
+
+.btn-red {
+    background-image: linear-gradient(to bottom, #ea5660, #e6303c);
+}
+
+.btn-red, .btn-red:hover, .btn-red:focus, .btn-red:focus-visible, .btn-red:active,
+.btn-red:first-child:active, :not(.btn-check) + .btn-red:active {
+    color: #ffffff;
+    background-color: #e6303c;
+}
+
+.btn-blue {
+    background-image: linear-gradient(to bottom, #67c5ed, #35b4e9);
+}
+
+.btn-blue, .btn-blue:hover, .btn-blue:focus, .btn-blue:focus-visible, .btn-blue:active,
+.btn-blue:first-child:active, :not(.btn-check) + .btn-blue:active {
+    color: #ffffff;
+    background-color: #35b4e9;
 }
 
 h2 {
     font-size: 1.2rem;
     font-weight: bold;
-    background-color: #ffaec9;
-    padding: 0.5rem;
+    background: url(/img/stars-2.png) repeat;
+    color: white;
+    padding: 0.3rem 0.5rem;
+    border-radius: 5px;
+    border: 1px #38aedc solid;
+    box-shadow: inset 0 0 2px 2px rgba(255, 255, 255, 0.5);
 }
 
-@media(min-width: 992px)
-{
-    a.nav-link {
-        border-top: 1px dashed #7a1d3c;
+footer {
+    color: white;
+    background: url(/img/stars-2.png) repeat;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    border: 1px #38aedc solid;
+    box-shadow: inset 0 0 2px 2px rgba(255, 255, 255, 0.5);
+}
+
+.navbar-toggler {
+    color: white;
+}
+
+.navbar {
+    background: url(/img/stars-2.png) repeat;
+    border: 1px #D0F0FB solid;
+    border-radius: 10px;
+}
+
+.navbar-header:after {
+    content: "navigation";
+}
+
+li.nav-item {
+    border-radius: 5px;
+    padding: 4px;
+    width: 100%;
+    box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.5);
+    transition: all 0.2s ease-in-out;
+}
+
+li.nav-item:hover, li.nav-item:focus, li.nav-item:active {
+    width: 115%;
+    
+    transition: all 0.2s ease-in-out;
+}
+
+li.nav-item a {
+    padding: 3px;
+    border-radius: 2.5px;
+    border: solid 1px white;
+    text-shadow: 1px 1px #33353a;
+    font-weight: bold;
+    color: white;
+}
+
+.nav-link:focus {
+    color: white;
+}
+
+.nav-home {
+    background-color: #E6303C;
+    color: white;
+    border: 1px solid #bc2630;
+}
+
+.nav-artists {
+    background-color: #F386AF;
+    color: white;
+    border: 1px solid #b36280;
+}
+
+.nav-labels {
+    background-color: #A983BC;
+    color: white;
+    border: 1px solid #725980;
+}
+
+.nav-genres {
+    background-color: #35B4E9;
+    color: white;
+    border: 1px solid #2785ac;
+}
+
+.nav-contribute {
+    background-color: #AAD52E;
+    color: white;
+    border: 1px solid #789721;
+}
+
+.nav-about {
+    background-color: #FEDB27;
+    color: white;
+    border: 1px solid #bda31e;
+}
+
+.navbar-collapse {
+    margin: 10px 0;
+}
+
+ul.navbar-nav {
+    gap: 4px;
+}
+
+@media(min-width: 992px) {
+    .navbar {
+        background: none;
+        border: none;
+    }
+    
+    .navbar-header:after {
+        content: "";
+    }
+    
+    li.nav-item {
+        width: 100%;
+    }
+
+    li.nav-item a {
+        text-align: left;
+    }
+    
+    .navbar-header {
+        text-align: center;
+        position: absolute;
+        right: 8%;
+        width: 40%;
+        height: 100%;
+        background: url(/img/stars-2.png) repeat;
+        border: 1px #38aedc solid;
+        box-shadow: inset 0 0 2px 2px rgba(255, 255, 255, 0.5);
+        border-radius: 10px;
+        z-index: 2;
+    }
+
+    .navbar-collapse ul {
+        justify-content: end;
     }
 }
 
-@media(max-width: 991px) {
-    a.nav-link {
-        text-align: end;
-        border-top: 1px dashed #7a1d3c;
-    }
-
-    .content {
-        border-left: none;
-    }
+.artist-img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px #38aedc solid;
 }
