--- a/Views/Layout.cshtml
+++ b/Views/Layout.cshtml
@@ -15,8 +15,10 @@
 <body>
 	<div class="container">
 		<div class="main">
-			<header class="py-3 mb-4">
-				<a href="/"><h1 class="text-center my-4">j-indies.net</h1></a>
+			<header class="mb-4 px-2 row">
+				<a href="/">
+					<h1>j-indies.net</h1>
+				</a>
 			</header>
 			<div class="row g-3">
 				<div class="col-lg-2">
@@ -51,8 +53,8 @@
 						</div>
 					</nav>
 					<div class="content p-2 mt-4">
-						<h2>Discord</h2>
-						<p class="mb-2">The j-indies! Discord server is what inspired this website!</p>
+						<h3>Discord</h3>
+						<p class="mb-2">This website was designed by members and friends of the <i>j-indies!</i> Discord server!</p>
 						<a class="btn btn-sm btn-blue float-end" href="https://discord.gg/5hPNPGpMDF" target="_blank">Click here to join :-)</a>
 					</div>
 				</div>
